# clap-test

./: Cargo.toml  LICENSE
.cargo/: config
src/: cli.yaml  main.rs
