[package]
name = "clap-test"
version = "0.1.0"
authors = ["Matthew Piercey <piercey.matthew@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/kbknapp/clap-rs.git", features = ["yaml"] }